# Arf-ID

Arf-BLE/src/: connect_ble.py
Arf-ID_M5_Version/: platformio.ini
Arf-ID_M5_Version/Arf-BLE/: README.md  pyproject.toml
Arf-ID_M5_Version/main/: Arf_BLE.cpp  Arf_BLE.h  Arf_NTP.cpp  Arf_NTP.h  MapRFID.h  R200.cpp  R200.h  main.ino  sdcard.cpp  sdcard.h
Arf-ID_M5_Version/main/scripts/: parsingSerial.py
R200/: R200.cpp  R200.h  R200.ino
